# espefi

./: CMakeLists.txt  README.md  sdkconfig
components/elf_loader/: CMakeLists.txt
components/elf_loader/include/: esp_elf.h
components/elf_loader/include/private/: elf_types.h
components/elf_loader/src/: esp_all_symbol.c  esp_elf.c  esp_elf_symbol.c
main/: CMakeLists.txt  espefi_api.c  espefi_apploader.c  espefi_console.c  espefi_event.c  espefi_posix.c  espefi_shell.c  espefi_usb.c  espefi_usbhid.c  espefi_usbmsc.c  espefi_vga.c  idf_component.yml  main.c  utf8proc.c  vga_disp.c
main/include/: espefi_api.h  espefi_api_internal.h  espefi_apploader.h  espefi_console.h  espefi_events.h  espefi_posix.h  espefi_usbhid.h  espefi_vga.h  list.h  u_vga16.h  vga_disp.h
